# pico_i2c_mpu6050

./: .gitignore  README.md
example/: CMakeLists.txt  example.c
include/: i2c_mpu6050.h
src/: i2c_mpu6050.c
